[gd_scene load_steps=5 format=2]

[ext_resource path="res://gameobjects/enemies/Pressalot/Pressalot.gd" type="Script" id=1]
[ext_resource path="res://gameobjects/enemies/Pressalot/pressalot.glb" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2.14262, 3.15688, 2.22971 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 2.0929, 0.380174, 2.0361 )

[node name="Pressalot" type="KinematicBody"]
collision_layer = 4
collision_mask = 15
script = ExtResource( 1 )
speed = 10
monitor_attack_range = 15

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="pressalot" parent="." instance=ExtResource( 2 )]

[node name="Area" type="Area" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.57476, 0 )
shape = SubResource( 2 )

[node name="Reset_Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Reset_Timer" to="." method="_on_Reset_Timer_timeout"]
